-m"updated css, included cran and mash"

--- a/recipes/cranberrysauce.html
+++ b/recipes/cranberrysauce.html
@@ -3,16 +3,18 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../stylesheets.css">
         <title>Cranberry Sauce</title>
     </head>
     <body>
         <a href="../index.html">Home</a>
         <h1>Cranberry Sauce</h1>
-        <img src="../images/cransauce.jpeg" height="310" width="310" alt="cranberry sauce">
+        <img src="../images/cransauce.jpeg" height="310" width="310" alt="cranberry sauce" id="food-pic">
+    
         <h3>Description</h3>
-        <p>Bring the sauce to the talk of the table with this delicous cranberry sauce!</p>
+        <p id="description">Bring the sauce to the talk of the table with this delicous cranberry sauce!</p>
         <h3>Ingredients</h3>
-        <ul>
+        <ul class="ingredients">
             <li>2/3 cup sugar</li>
             <li>1/3 cup light brown sugar, tightly packed</li>
             <li>1/3 cup water</li>
@@ -20,7 +22,8 @@
             <li>12 oz cranberries, rinsed and picked through, bad/bruised cranberries removed</li>  
         </ul>
         <h3>Steps</h3>
-        <ol>
+        
+        <ol class="steps">
             <li>Combine sugars, water, and orange juice in a medium-sized saucepan over medium heat.  
                 Stir occasionally until sugars are dissolved, and bring to a boil.  
                 ⅔ cup (133 g) sugar, ⅓ cup (67 g) light brown sugar, tightly packed, ⅓ cup (78 ml) water, 
