--- a/recipes/mashedpotatoes.html
+++ b/recipes/mashedpotatoes.html
@@ -3,16 +3,17 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="../stylesheets.css">
         <title>Mashed Potatoes</title>
     </head>
     <body>
         <a href="../index.html">Home</a>
         <h1>Mashed Potatoes</h1>
-        <img src="../images/mashedpotatoes.jpeg" height="310" width="310" alt="mashed potatoes">
+        <img src="../images/mashedpotatoes.jpeg" height="310" width="310" alt="mashed potatoes" id="food-pic">
         <h3>Description</h3>
-        <p>The most amazing mashed potatoes known in the universe!</p>
+        <p id="description">The most amazing mashed potatoes known in the universe!</p>
         <h3>Ingredients</h3>
-        <ul>
+        <ul class="ingredients">
             <li>
                 4 pounds potatoes russet or Yukon gold
             </li>
@@ -33,7 +34,7 @@
             </li>
         </ul>
         <h3>Steps</h3>
-        <ol>
+        <ol class="steps">
             <li>
                 Peel and quarter potatoes, place in a pot of cold salted water.
             </li>
