-m"css for turducken"

--- a/recipes/turducken.html
+++ b/recipes/turducken.html
@@ -3,16 +3,17 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale:1.0">
+        <link rel="stylesheet" href="../stylesheets.css">
         <title>Turducken</title>
     </head>
     <body>
         <a href="../index.html">Home</a>
         <h1>Turducken</h1>
-        <img src="../images/turducken.jpeg" height="310" width="375" alt="Image of cooked and cut turducken" title="Turducken">
+        <img src="../images/turducken.jpeg" height="310" width="375" alt="Image of cooked and cut turducken" id="food-pic">
         <h3>Description</h3>
-        <p>Turducken brings three birds into one dish, turkey, duck, and chicken.</p>
+        <p id="description">Turducken brings three birds into one dish, turkey, duck, and chicken.</p>
         <h3>Ingredients</h3>
-        <ul>
+        <ul class="ingredients">
             <li>Kosher salt and freshly ground black pepper</li>
             <li>1 small chicken (3 1/2 to 4 pounds pre-boning</li>
             <li>2 pounds raw bulk sausage meat</li>
@@ -21,7 +22,7 @@
             <li>1 turkey (10 to 13 pounds), carcass removed, leg and wing bones left intact</li>
         </ul>
         <h3>Steps</h3>
-        <ol>
+        <ol class="steps">
             <li>Season chicken evenly on all sides with salt and pepper. Lay chicken flat, skin side down, on cutting board. 
                 Shape 12 ounces of sausage into a log roughly 2 inches in diameter and place in the center of
                  the chicken. Lift one side of chicken and wrap tightly around sausage. 
