--- a/recipes/turducken.html
+++ b/recipes/turducken.html
@@ -11,7 +11,7 @@
         <h1>Turducken</h1>
         <img src="../images/turducken.jpeg" height="310" width="375" alt="Image of cooked and cut turducken" id="food-pic">
         <h3>Description</h3>
-        <p id="description">Turducken brings three birds into one dish, turkey, duck, and chicken.</p>
+        <p id="description">Turducken brings three birds into one dish; turkey, duck, and chicken.</p>
         <h3>Ingredients</h3>
         <ul class="ingredients">
             <li>Kosher salt and freshly ground black pepper</li>
